# CopyCatOS

./: .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  LICENSE  README.md  aura-rotate.sh  cc-rotate.sh
aura-menubar/: meson.build
aura-menubar/src/: apple.c  apple.h  appmenu.c  appmenu.h  main.c  menubar.c  render.c  render.h  systray.c  systray.h
aura-wm/: meson.build
aura-wm/session/: aura-session.sh  aura.desktop  picom.conf
aura-wm/src/: assets.c  assets.h  client.c  compositor.c  compositor.h  crystal.c  crystal.h  crystal_display.c  crystal_mission_control.h  crystal_plugin.c  crystal_plugin.h  crystal_robust.c  crystal_robust.h  crystal_shaders.c  decor.c  decor.h  events.c  events.h  ewmh.c  ewmh.h  frame.c  frame.h  input.c  input.h  main.c  resize.c  resize.h  struts.c  struts.h  wm.c  wm.h
cc-desktop/: meson.build
cc-desktop/src/: contextmenu.c  contextmenu.h  desktop.c  dnd.h  icons.c  icons.h  labels.c  labels.h  layout.h  main.c  wallpaper.c
cc-finder/: meson.build
cc-finder/src/: content.c  content.h  finder.c  finder.h  main.c  sidebar.c  sidebar.h
cc-input-session/: meson.build
cc-input-session/src/: actions.c  actions.h  main.c  session.c  session.h  window_track.h
cc-inputd/: meson.build
cc-inputd/data/: cc-inputd.service
cc-inputd/src/: config.c  config.h  device.c  device.h  hid.h  inputd.c  inputd.h  ipc.h  main.c  mapper.c  mapper.h  mouse.c  mouse.h  power.c  power.h  uinput.c  uinput.h
cc-inputd/systemd/: 90-legion-go.rules  cc-inputd.service  logind-copicatos.conf
cc-sysprefs/: meson.build
cc-sysprefs/src/: icongrid.h  main.c  paneview.c  paneview.h  registry.c  sysprefs.c  sysprefs.h  toolbar.c  toolbar.h
cc-sysprefs/src/panes/: controller.c  controller.h  dock.c  dock.h  power.c  power.h  stub.c  stub.h
cc-wm/: meson.build
cc-wm/session/: cc-session.sh  copicatos.desktop  picom.conf
cc-wm/src/: assets.c  assets.h  client.c  compositor.c  compositor.h  decor.c  decor.h  events.c  events.h  ewmh.c  ewmh.h  frame.c  frame.h  input.c  input.h  main.c  moonrock.c  moonrock.h  moonrock_anim.c  moonrock_anim.h  moonrock_display.c  moonrock_mission_control.c  moonrock_plugin.c  moonrock_plugin.h  moonrock_robust.c  moonrock_shaders.c  moonrock_touch.c  moonrock_touch.h  resize.c  resize.h  struts.c  struts.h  wm.c  wm.h
cc-wm/tools/: cc-setcursor.c
desktop/: meson.build
desktop/src/: contextmenu.c  contextmenu.h  desktop.c  desktop.h  dnd.c  dnd.h  icons.c  icons.h  labels.c  labels.h  layout.c  layout.h  main.c  wallpaper.c  wallpaper.h
dock/: meson.build
dock/src/: bounce.c  bounce.h  config.c  config.h  dnd.c  dnd.h  dock.c  dock.h  indicator.c  indicator.h  launch.c  launch.h  magnify.c  magnify.h  main.c  menu.c  menu.h  poof.c  poof.h  reflect.c  reflect.h  shelf.c  shelf.h  stacks.c  stacks.h  tooltip.c  tooltip.h
inputd/: meson.build
inputd/data/: 99-inputd.rules  inputd.service
inputd/src/: config.c  config.h  device.c  device.h  hid.c  hid.h  inputd.c  inputd.h  ipc.c  ipc.h  main.c  mapper.c  mapper.h  mouse.c  mouse.h  power.c  power.h  uinput.c  uinput.h
inputd/systemd/: 90-legion-go.rules  inputd.service  logind-copycatos.conf
inputmap/: meson.build
inputmap/src/: config_editor.c  config_editor.h  main.c  scanner.c  scanner.h
inputsession/: meson.build
inputsession/src/: actions.c  actions.h  main.c  session.c  session.h  window_track.c  window_track.h
menubar/: meson.build
menubar/render/: menubar_render.c  menubar_render.h
menubar/src/: apple.c  apple.h  appmenu.c  appmenu.h  appmenu_bridge.c  appmenu_bridge.h  dbusmenu_client.c  dbusmenu_client.h  main.c  menu_model.c  menu_model.h  menubar.c  menubar.h  render.c  render.h  systray.c  systray.h
menubar/src/tools/: dbusmenu-mock.py  legacy-mock-app.py  mb-dbusmenu-dump.c
moonbase/: meson.build
moonbase/examples/activity-monitor/: Info.appc  main.c
moonbase/examples/aqua-demo/: Info.appc  main.c
moonbase/examples/gl-hello/: Info.appc  main.c
moonbase/examples/hello/: Info.appc  main.c
moonbase/examples/keychain-access/: Info.appc  main.c
moonbase/examples/preview/: Info.appc  main.c
moonbase/examples/textedit/: Info.appc  main.c
moonbase/include/: CopyCatAppKit.h  moonbase.h  moonbase_a11y.h  moonbase_clipboard.h  moonbase_controller.h  moonbase_display.h  moonbase_keychain.h  moonbase_notifications.h  moonbase_power.h  moonbase_print.h  moonbase_quicklook.h  moonbase_services.h  moonbase_share.h  moonbase_spotlight.h
moonbase/launcher/: moonbase-consent.c  moonbase-launch.c
moonbase/packaging/: moonbase.conf.in
moonbase/runtime/: icon_bucket.h  moonbase-launcher.c
moonbase/sandbox/: native.profile  webview.profile
moonbase/scripts/: valgrind-leak-loop.sh
moonbase/src/: bundle.c  bundle.h  consents.c  consents.h  entitlements.c  entitlements.h  error.c  eventloop.c  gl_path.c  gl_path.h  init.c  internal.h  main.c  stubs.c  version.c  window.c
moonbase/src/bundle/: appimg.c  appimg.h  bundle.c  bundle.h  info_appc.c  info_appc.h  quarantine.c  quarantine.h  toml_lite.c  toml_lite.h
moonbase/src/host/: host_chrome.c  host_chrome.h  host_hittest.c  host_hittest.h  host_protocol.c  (+3 more)
moonbase/stub/: stub.c
moonbase/tests/: appimg.c  backing-scale-changed.c  bundle-load.c  consent-cli.c  consent-gate-ipc.c  consent-reader.c  consent-responder.c  consent-wire.c  data-dir-isolation.c  drag-events.c  entitlement-gate.c  event-window-closed.c  gl-path.c  hello-handshake.c  hello.c  icon-bucket.c  info-appc.c  input-route.c  launch-appimg.c  launch-quarantine.c  launch-smoke.c  leakcheck-loop.c  pack-smoke.c  pointer-route.c  quarantine.c  resize-route.c  runtime-version.c  server-fds.c  server-smoke.c  text-input-route.c  window-commit-burst.c  window-commit.c  window-create.c
moonbase/tools/: moonbase-pack.c  moonbase-version.c
moonrock-host/: meson.build
moonrock-host/src/: moonrock_host.c
moonrock-lite/: meson.build
moonrock-lite/src/: moonrock_lite.c
searchsystem/: meson.build
searchsystem/src/: icons.c  icons.h  main.c  render.c  render.h  search.c  search.h  spotlight.c  spotlight.h
(+8998 files in other folders)
